github_data_collector/src/data/issue_comment/kpcyrd_sniffglue.txt
Hi,
first of all a BIG THANK YOU for sharing your work! 
I'm trying to install sniffglue on WSL every thing goes well without any errors but when I want to run it have this error:

`rbeen@------:~$ sudo .cargo/bin/sniffglue
[sudo] password for rbeen:
thread 'main' panicked at 'init sandbox stage1: Seccomp(Error { inner: "seccomp_load returned error" })', src/libcore/result.rs:999:5
note: Run with `RUST_BACKTRACE=1` environment variable to display a backtrace.
rbeen@------:~$`

Can it be fixed?
Thanks in advance!
Best regards,

Rbeen 
Before, there was not the ability to output to a pcap formatted file that can be opened by tools like `wireshark`. This PR adds that support through a new `-o` or `--output` flag that allows specifying a pcap output file. It follows with the existing structure (conforming to the verbosity levels) and has no extra parsing overhead if the user does not use the flag. 
On MacOS and Ubuntu, the same error preventing installation while running "cargo install sniffglue"

Dell-3:~$ cargo install sniffglue
    Updating crates.io index
  Installing sniffglue v0.9.0
   Compiling libc v0.2.58
   Compiling autocfg v0.1.4
   Compiling rand_core v0.4.0
   Compiling siphasher v0.2.3
   Compiling proc-macro2 v0.4.30
   Compiling memchr v2.2.0
   Compiling unicode-xid v0.1.0
   Compiling typenum v1.10.0
   Compiling version_check v0.1.5
   Compiling byteorder v1.3.2
   Compiling bitflags v1.1.0
   Compiling syn v0.15.38
   Compiling regex v1.1.7
   Compiling unicode-width v0.1.5
   Compiling ryu v0.2.8
   Compiling ucd-util v0.1.3
   Compiling unicode-segmentation v1.3.0
   Compiling serde v1.0.93
   Compiling lazy_static v1.3.0
   Compiling byte-tools v0.3.1
   Compiling pcap v0.7.0
   Compiling strsim v0.8.0
   Compiling vec_map v0.8.1
   Compiling quick-error v1.2.2
   Compiling nix v0.14.1
   Compiling cfg-if v0.1.9
   Compiling utf8-ranges v1.0.3
   Compiling ansi_term v0.11.0
   Compiling termcolor v1.0.5
   Compiling void v1.0.2
   Compiling itoa v0.4.4
   Compiling opaque-debug v0.2.2
   Compiling fake-simd v0.1.2
   Compiling cookie-factory v0.2.4
   Compiling reduce v0.1.2
   Compiling phf_shared v0.7.24
   Compiling rand_core v0.3.1
   Compiling rand_chacha v0.1.1
   Compiling rand_pcg v0.1.2
   Compiling rand v0.6.5
   Compiling num-traits v0.2.8
   Compiling nom v4.2.3
   Compiling textwrap v0.11.0
   Compiling regex-syntax v0.6.7
   Compiling block-padding v0.1.4
   Compiling thread_local v0.3.6
   Compiling humantime v1.2.0
   Compiling log v0.4.6
   Compiling heck v0.3.1
   Compiling rand_hc v0.1.0
   Compiling rand_isaac v0.1.1
   Compiling rand_xorshift v0.1.1
   Compiling phf v0.7.24
   Compiling rand_os v0.1.3
   Compiling rand_jitter v0.1.4
   Compiling atty v0.2.11
   Compiling time v0.1.42
   Compiling dirs-sys v0.3.3
   Compiling num_cpus v1.10.1
   Compiling users v0.9.1
   Compiling aho-corasick v0.7.3
   Compiling dns-parser v0.8.0
   Compiling base64 v0.10.1
   Compiling clap v2.33.0
   Compiling generic-array v0.12.0
   Compiling threadpool v1.7.1
   Compiling dirs v2.0.1
   Compiling quote v0.6.12
   Compiling dhcp4r v0.1.0
   Compiling rusticata-macros v1.1.0
   Compiling num-traits v0.1.43
   Compiling digest v0.8.0
   Compiling block-buffer v0.7.3
   Compiling enum_primitive v0.1.1
   Compiling sha2 v0.8.0
   Compiling toml v0.5.1
   Compiling serde_json v1.0.39
   Compiling phf_generator v0.7.24
   Compiling phf_codegen v0.7.24
   Compiling tls-parser v0.7.1
   Compiling env_logger v0.6.1
   Compiling structopt-derive v0.2.16
   Compiling serde_derive v1.0.93
   Compiling structopt v0.2.16
   Compiling pktparse v0.4.0
   Compiling sniffglue v0.9.0
error[E0432]: unresolved imports `nix::unistd::getgroups`, `nix::unistd::setgroups`
 --> /Users/skickar/.cargo/registry/src/github.com-1ecc6299db9ec823/sniffglue-0.9.0/src/sandbox/mod.rs:7:45
  |
7 | use nix::unistd::{Uid, Gid, setuid, setgid, getgroups, setgroups};
  |                                             ^^^^^^^^^  ^^^^^^^^^ no `setgroups` in `unistd`
  |                                             |
  |                                             no `getgroups` in `unistd`

error[E0432]: unresolved import `syscallz`
 --> /Users/skickar/.cargo/registry/src/github.com-1ecc6299db9ec823/sniffglue-0.9.0/src/sandbox/error.rs:3:5
  |
3 | use syscallz;
  |     ^^^^^^^^ no `syscallz` in the root

error[E0119]: conflicting implementations of trait `std::convert::From<[type error]>` for type `sandbox::error::Error`:
  --> /Users/skickar/.cargo/registry/src/github.com-1ecc6299db9ec823/sniffglue-0.9.0/src/sandbox/error.rs:23:1
   |
17 | impl From<syscallz::Error> for Error {
   | ------------------------------------ first implementation here
...
23 | impl From<config::Error> for Error {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `sandbox::error::Error`

error[E0119]: conflicting implementations of trait `std::convert::From<[type error]>` for type `sandbox::error::Error`:
  --> /Users/skickar/.cargo/registry/src/github.com-1ecc6299db9ec823/sniffglue-0.9.0/src/sandbox/error.rs:29:1
   |
17 | impl From<syscallz::Error> for Error {
   | ------------------------------------ first implementation here
...
29 | impl From<nix::Error> for Error {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `sandbox::error::Error`

error[E0119]: conflicting implementations of trait `std::convert::From<[type error]>` for type `sandbox::error::Error`:
  --> /Users/skickar/.cargo/registry/src/github.com-1ecc6299db9ec823/sniffglue-0.9.0/src/sandbox/error.rs:35:1
   |
17 | impl From<syscallz::Error> for Error {
   | ------------------------------------ first implementation here
...
35 | impl From<std::io::Error> for Error  {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `sandbox::error::Error`

error: aborting due to 5 previous errors

Some errors occurred: E0119, E0432.
For more information about an error, try `rustc --explain E0119`.
error: failed to compile `sniffglue v0.9.0`, intermediate artifacts can be found at `/var/folders/n1/l_2ynlx91lv57t122lq8lkyh0000gn/T/cargo-installe89ORx`

Caused by:
  Could not compile `sniffglue`.



---------------------------------------------------------


Add an option to write to pcap files.
This is a basic cargo-deb support; I'll add the manpage once mmstick/cargo-deb#97 is resolved (if I remember why I have opened this issue ...).
It's currently not possible to filter traffic besides verbosity levels and grepping on the output.

There should be at least a simple filter engine similar to tcpdump:

- src/dest ip
- src/dest port
- a specific protocol

This could also abort parsing early, so if the filter didn't match we don't have to decode the upper layers anymore.
It's currently not possible to see the tcp flags, like SYN/ACK/RST etc, this is very limiting in some debugging usecases and they should be displayed in the output.
Right now a user has to figure out the verbosity levels with try and error or by reading the source code. There should be a table in the man page for this.
We currently only try to decode packets to port :443 as server hello. This means we rate tls hello packets on other port as binary.
This would both drop a C dependency we currently have with pure rust, and most likely also enable osx support.

This is currently blocked by https://github.com/libpnet/libpnet/issues/331